...
                        containerColor = FabPeach,
                        modifier = Modifier.padding(bottom = 0.dp)
                    ) {
                        Icon(
                            imageVector = if (isOnHomeScreen && isSubmenuVisible) Icons.Default.Close else Icons.Default.Add,
                            contentDescription = when (currentRoute) {
                                "home" -> if (isSubmenuVisible) "Close Menu" else "Add Options"
                                "gift_list" -> "Add Gift"
                                "person_list" -> "Add Person"
                                "event_list" -> "Add Event"
                                else -> "Add"
                            }
                        )
                    }
                }
...
